src/components/Header/Header.module.css
/*===== Welcome gradient section =====*/
.welcome {
    max-height: 640px;
    position: relative;
}

.welcome__photo {
    width: 50%;
}

.welcome__gradient {
    align-items: center;
    background: var(--main-background);
    background: var(--main-gradient);
    display: flex;
    justify-content: space-evenly;
    max-height: 87%;
    min-width: 50%;
}

.welcome__hero {
    height: auto;
    margin: var(--margin-24px);
    max-width: 30%;
}

.welcome__description {
    color: var(--main-color);
    font-size: var(--font-header);
    margin: var(--margin-24px);
}

.welcome__contact {
    animation: contactBounce 8s infinite forwards;
    background: none;
    border: 3px solid var(--main-color);
    color: var(--main-color);
    font-size: var(--font-normal);
    margin: 20px 0;
    max-width: max-content;
    padding: 0 10px;
    text-align: center;
    transition: var(--transition);
}

.welcome__contact:hover {
    background-color: var(--main-color);
    color: var(--main-background);
}

@keyframes contactBounce {
    40% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.1);
    }
    60% {
        transform: scale(1);
    }
}

.welcome__traits {
    color: var(--main-color);
    display: flex;
    font-size: var(--font-header);
    justify-content: space-around;
    left: 0;
    position: absolute;
    top: 78%;
    width: 50%;
}

.traits__passion, .traits__desire, .traits__patience, .traits__creativity, .traits__discipline {
    animation: traitsLoading 2s 1 forwards;
    opacity: 0;
}

.traits__passion {
    animation-delay: .3s;
}

.traits__desire {
    animation-delay: .5s;
}

.traits__patience {
    animation-delay: 1s;
}

.traits__creativity {

    animation-delay: 1.5s;
}

.traits__discipline {
    animation-delay: 2s;
}

@keyframes traitsLoading {
    10% {
        opacity: 0;
    }
    50% {
        opacity: 50%;
        transform: scale(.9);
    }
    100% {
        opacity: 100%;
        transform: scale(1);
    }
}


/*===== Media queries =====*/
@media (max-width: 1200px) {
    .welcome {
        flex-direction: column;
    }

    .welcome__gradient, .welcome__photo {
        height: 300px;
        width: 100%;
    }

    .welcome__hero {
        max-width: 23%;
    }

    .welcome__traits {
        top: 45%;
        width: 100%;
    }
}

@media (max-width: 768px) {
    .welcome__traits {
        font-size: 2vw;
    }

    .welcome__description {
        font-size: 3vw;
    }

    h1 {
        font-size: 3rem;
    }

    .welcome__gradient, .welcome__photo {
        height: 250px;
    }

    .welcome__contact {
        min-width: 100%;
    }
}

